tools/generation/test/fixtures/async-negative-invalid.case
// Copyright (C) 2017 the V8 project authors. All rights reserved.
// This code is governed by the BSD license found in the LICENSE file.

/*---
desc: Early SyntaxError tests should not include "async" in flags[]
template: async
negative:
  phase: parse
  type: SyntaxError
---*/

//- setup
$DONOTEVALUATE();
//- body
1=1;
